--- a/wasm/pkgs/playnet/package.json
+++ b/wasm/pkgs/playnet/package.json
@@ -1,14 +1,14 @@
 {
   "name": "playnet",
   "collaborators": [
-    "Acheron <acheroncrypto@gmail.com>"
+    "NxPKG <iconmamundentist@gmail.com>"
   ],
   "description": "A minimal runtime to execute Solana programs",
   "version": "0.1.0",
   "license": "GPL-3.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/solana-playground/solana-playground"
+    "url": "https://github.com/nxpkg/solana-dev"
   },
   "files": [
     "playnet_bg.wasm",
@@ -17,7 +17,7 @@
     "playnet.d.ts"
   ],
   "module": "playnet.js",
-  "homepage": "https://beta.solpg.io",
+  "homepage": "https://beta.solana-dev.io",
   "types": "playnet.d.ts",
   "sideEffects": false,
   "keywords": [
