--- a/wasm/pkgs/rustfmt/package.json
+++ b/wasm/pkgs/rustfmt/package.json
@@ -1,14 +1,14 @@
 {
   "name": "rustfmt-wasm",
   "collaborators": [
-    "Acheron <acheroncrypto@gmail.com>"
+    "NxPKG <iconmamundentist@gmail.com>"
   ],
   "description": "Rust formatter for WASM",
   "version": "0.99.4",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/solana-playground/solana-playground"
+    "url": "https://github.com/nxpkg/solana-dev"
   },
   "files": [
     "rustfmt_wasm_bg.wasm",
@@ -17,7 +17,7 @@
     "rustfmt_wasm.d.ts"
   ],
   "module": "rustfmt_wasm.js",
-  "homepage": "https://beta.solpg.io",
+  "homepage": "https://beta.solana-dev.io",
   "types": "rustfmt_wasm.d.ts",
   "sideEffects": false,
   "keywords": [
