--- a/wasm/playnet/Cargo.toml
+++ b/wasm/playnet/Cargo.toml
@@ -2,10 +2,10 @@
 name = "playnet"
 version = "0.1.0"
 description = "A minimal runtime to execute Solana programs"
-authors = ["Acheron <acheroncrypto@gmail.com>"]
-repository = "https://github.com/solana-playground/solana-playground"
+authors = ["NxPKG <iconmamundentist@gmail.com>"]
+repository = "https://github.com/nxpkg/solana-dev"
 license = "GPL-3.0"
-homepage = "https://beta.solpg.io"
+homepage = "https://beta.solana-dev.io"
 edition = "2021"
 keywords = ["playnet", "solana", "playground", "wasm"]
 
