--- a/wasm/rust-analyzer/Cargo.toml
+++ b/wasm/rust-analyzer/Cargo.toml
@@ -2,10 +2,10 @@
 name = "rust-analyzer-wasm"
 version = "0.0.100" # mirror RA version
 description = "Rust Analyzer WASM"
-authors = ["Acheron <acheroncrypto@gmail.com>"]
-repository = "https://github.com/solana-playground/solana-playground"
+authors = ["NxPKG <iconmamundentist@gmail.com>"]
+repository = "https://github.com/nxpkg/solana-dev"
 license = "GPL-3.0"
-homepage = "https://beta.solpg.io"
+homepage = "https://beta.solana-dev.io"
 edition = "2021"
 keywords = ["rust", "analyzer", "wasm"]
 
