--- a/wasm/rustfmt/rustfmt-wasm/Cargo.toml
+++ b/wasm/rustfmt/rustfmt-wasm/Cargo.toml
@@ -2,10 +2,10 @@
 name = "rustfmt-wasm"
 version = "0.99.4"
 description = "Rust formatter for WASM"
-authors = ["Acheron <acheroncrypto@gmail.com>"]
-repository = "https://github.com/solana-playground/solana-playground"
+authors = ["NxPKG <iconmamundentist@gmail.com>"]
+repository = "https://github.com/nxpkg/solana-dev"
 license = "Apache-2.0"
-homepage = "https://beta.solpg.io"
+homepage = "https://beta.solana-dev.io"
 keywords = ["rustfmt", "wasm", "rust", "format", "rustwasm"]
 
 [lib]
