--- a/wasm/solana-client/Cargo.toml
+++ b/wasm/solana-client/Cargo.toml
@@ -2,10 +2,10 @@
 name = "solana-client-wasm"
 version = "1.18.0" # mirror solana-sdk version
 description = "Solana non-blocking WASM RPC client."
-authors = ["Acheron <acheroncrypto@gmail.com>"]
-repository = "https://github.com/solana-playground/solana-playground"
+authors = ["NxPKG <iconmamundentist@gmail.com>"]
+repository = "https://github.com/nxpkg/solana-dev"
 license = "Apache-2.0"
-homepage = "https://beta.solpg.io"
+homepage = "https://beta.solana-dev.io"
 edition = "2021"
 keywords = ["solana", "wasm", "client", "rpc", "playground"]
 readme = "README.md"
