--- a/wasm/spl-token-cli/Cargo.toml
+++ b/wasm/spl-token-cli/Cargo.toml
@@ -2,10 +2,10 @@
 name = "spl-token-cli-wasm"
 version = "2.0.15"
 description = "SPL-Token CLI for Solana Playground with WASM."
-authors = ["Acheron <acheroncrypto@gmail.com>"]
-repository = "https://github.com/solana-playground/solana-playground"
+authors = ["NxPKG <iconmamundentist@gmail.com>"]
+repository = "https://github.com/nxpkg/solana-dev"
 license = "GPL-3.0"
-homepage = "https://beta.solpg.io"
+homepage = "https://beta.solana-dev.io"
 edition = "2021"
 keywords = ["spl", "token", "solana", "cli", "wasm"]
 
