--- a/wasm/utils/solana-clap-v3-utils/Cargo.toml
+++ b/wasm/utils/solana-clap-v3-utils/Cargo.toml
@@ -2,10 +2,10 @@
 name = "solana-clap-v3-utils-wasm"
 version = "1.11.0"
 description = "Solana WASM utilities for clap v3"
-authors = ["Acheron <acheroncrypto@gmail.com>"]
-repository = "https://github.com/solana-playground/solana-playground"
+authors = ["NxPKG <iconmamundentist@gmail.com>"]
+repository = "https://github.com/nxpkg/solana-dev"
 license = "Apache-2.0"
-homepage = "https://beta.solpg.io"
+homepage = "https://beta.solana-dev.io"
 edition = "2021"
 keywords = ["solana", "playground", "wasm", "clap"]
 
