--- a/wasm/utils/solana-cli-output/Cargo.toml
+++ b/wasm/utils/solana-cli-output/Cargo.toml
@@ -2,10 +2,10 @@
 name = "solana-cli-output-wasm"
 version = "1.11.0"
 description = "Solana WASM CLI output."
-authors = ["Acheron <acheroncrypto@gmail.com>"]
-repository = "https://github.com/solana-playground/solana-playground"
+authors = ["NxPKG <iconmamundentist@gmail.com>"]
+repository = "https://github.com/nxpkg/solana-dev"
 license = "Apache-2.0"
-homepage = "https://beta.solpg.io"
+homepage = "https://beta.solana-dev.io"
 edition = "2021"
 keywords = ["solana", "playground", "wasm"]
 
