--- a/wasm/utils/solana-extra/Cargo.toml
+++ b/wasm/utils/solana-extra/Cargo.toml
@@ -2,10 +2,10 @@
 name = "solana-extra-wasm"
 version = "1.18.0" # mirror solana-sdk version
 description = "Solana WASM compatible utilities."
-authors = ["Acheron <acheroncrypto@gmail.com>"]
-repository = "https://github.com/solana-playground/solana-playground"
+authors = ["NxPKG <iconmamundentist@gmail.com>"]
+repository = "https://github.com/nxpkg/solana-dev"
 license = "Apache-2.0"
-homepage = "https://beta.solpg.io"
+homepage = "https://beta.solana-dev.io"
 edition = "2021"
 keywords = ["solana", "playground", "wasm", "extra", "utils"]
 readme = "README.md"
