--- a/wasm/utils/solana-playground-utils/Cargo.toml
+++ b/wasm/utils/solana-playground-utils/Cargo.toml
@@ -2,10 +2,10 @@
 name = "solana-playground-utils-wasm"
 version = "0.1.0"
 description = "WASM utils for Solana Playground."
-authors = ["Acheron <acheroncrypto@gmail.com>"]
-repository = "https://github.com/solana-playground/solana-playground"
+authors = ["NxPKG <iconmamundentist@gmail.com>"]
+repository = "https://github.com/nxpkg/solana-dev"
 license = "Apache-2.0"
-homepage = "https://beta.solpg.io"
+homepage = "https://beta.solana-dev.io"
 edition = "2021"
 keywords = ["solana", "playground", "wasm"]
 
